# rag-poc

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.milvus.yml  pyproject.toml
configs/: local.yaml
scripts/: ingest.py  query.py
src/: app.py
src/rag_poc/: config.py  llm.py  logging_utils.py  pipeline.py  vector.py
